// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomAction generateCustomAction generateCustomAction 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "targets": Object {
        "TestObjectPage": Object {
          "name": "sap.fe.templates.ListReport",
          "options": Object {
            "settings": Object {
              "content": Object {
                "header": Object {
                  "actions": Object {
                    "MyCustomAction": Object {
                      "enabled": true,
                      "press": "my.test.App.ext.MyCustomAction.onPress",
                      "text": "My custom action text",
                      "visible": true,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`CustomAction generateCustomAction generateCustomAction 2`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function() {
            MessageToast.show(\\"CustomAction handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomAction getTargetElementReference get reference for different control types 1`] = `
Object {
  "sap.ui5": Object {
    "routing": Object {
      "targets": Object {
        "TestPage": Object {
          "options": Object {
            "settings": Object {
              "content": Object {
                "header": Object {
                  "actions": Object {},
                },
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`CustomAction getTargetElementReference get reference for different control types 2`] = `
Object {
  "sap.ui5": Object {
    "routing": Object {
      "targets": Object {
        "TestPage": Object {
          "options": Object {
            "settings": Object {
              "content": Object {
                "footer": Object {
                  "actions": Object {},
                },
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`CustomAction getTargetElementReference get reference for different control types 3`] = `
Object {
  "sap.ui5": Object {
    "routing": Object {
      "targets": Object {
        "TestPage": Object {
          "options": Object {
            "settings": Object {
              "controlConfiguration": Object {
                "@com.sap.vocabularies.UI.v1.FieldGroup": Object {
                  "actions": Object {},
                },
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`CustomAction getTargetElementReference get reference for different control types 4`] = `
Object {
  "sap.ui5": Object {
    "routing": Object {
      "targets": Object {
        "TestPage": Object {
          "options": Object {
            "settings": Object {
              "controlConfiguration": Object {
                "@com.sap.vocabularies.UI.v1.FieldGroup#FacetCustomAction": Object {
                  "actions": Object {},
                },
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`CustomAction getTargetElementReference get reference for different control types 5`] = `
Object {
  "sap.ui5": Object {
    "routing": Object {
      "targets": Object {
        "TestPage": Object {
          "options": Object {
            "settings": Object {
              "controlConfiguration": Object {
                "@com.sap.vocabularies.UI.v1.LineItem": Object {
                  "actions": Object {},
                },
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`CustomAction getTargetElementReference get reference for different control types 6`] = `
Object {
  "sap.ui5": Object {
    "routing": Object {
      "targets": Object {
        "TestPage": Object {
          "options": Object {
            "settings": Object {
              "controlConfiguration": Object {
                "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
                  "actions": Object {},
                },
              },
            },
          },
        },
      },
    },
  },
}
`;
